# TaylorExpansion

./: README.md  pyproject.toml
TaylorExpansion/: __init__.py
